<resources>
    <string name="app_name">GithubUser</string>
    <string name="username">Username</string>
    <string name="user_profile_picture">User Profile Picture</string>
    <string name="search_hint">Search username</string>
    <string name="search_icon">Search Icon</string>
    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="zero">0</string>
    <string name="repository">Repository</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="bio">Bio</string>
    <string name="location">Location</string>
    <string name="tab_1">Followers</string>
    <string name="tab_2">Following</string>
    <string name="tab_layout">Tab Layout</string>
    <string name="view_pager">View Pager</string>
    <string name="clear_text">Clear Text</string>
    <string name="fab">Floating Action Button</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="back">Back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_user">Delete User</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="recommendation">Recommendation</string>
    <string name="search">Search</string>
</resources>