<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:layout_height="500dp">

    <ImageView
        android:id="@+id/iv_profile"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/user_profile_picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/name"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_profile"
        app:layout_constraintTop_toTopOf="@+id/iv_profile" />

    <TextView
        android:id="@+id/tv_company"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_name"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        tools:text="@string/company" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/iv_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_profile"
        app:layout_constraintTop_toBottomOf="@+id/tv_company">

        <TableRow>

            <TextView
                android:id="@+id/tv_repository"
                android:layout_marginTop="16dp"
                android:text="@string/zero"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_followers"
                android:layout_marginTop="16dp"
                android:text="@string/zero"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_following"
                android:layout_marginTop="16dp"
                android:text="@string/zero"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/tv_repository_label"
                android:layout_margin="4dp"
                android:text="@string/repository"
                android:textAlignment="center"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_followers_label"
                android:layout_margin="4dp"
                android:text="@string/followers"
                android:textAlignment="center"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_following_label"
                android:layout_margin="4dp"
                android:text="@string/following"
                android:textAlignment="center"
                android:textSize="14sp" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        tools:text="@string/location" />

    <TextView
        android:id="@+id/tv_bio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_location"
        tools:text="@string/bio" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_bio">

        <TableRow android:gravity="center">

            <ImageView
                android:id="@+id/btn_clear"
                android:layout_marginEnd="46dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/delete_user"
                android:src="@drawable/ic_clear" />

            <ImageView
                android:id="@+id/btn_favorite"
                android:layout_marginStart="46dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/add_to_favorite"
                android:src="@drawable/ic_favorite" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>