<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailUserActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_profile"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="24dp"
                    android:contentDescription="@string/user_profile_picture"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_username"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="48dp"
                    android:gravity="center"
                    android:text="@string/username"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_margin="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/iv_profile"
                    app:layout_constraintTop_toTopOf="@+id/iv_profile" />

                <TextView
                    android:id="@+id/tv_company"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    tools:text="@string/company"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@+id/tv_name"
                    app:layout_constraintStart_toStartOf="@+id/tv_name"
                    app:layout_constraintTop_toBottomOf="@+id/tv_name" />

                <TableLayout
                    android:id="@+id/tableLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_profile"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/iv_profile"
                    app:layout_constraintTop_toBottomOf="@+id/tv_company">

                    <TableRow>
                        <TextView
                            android:id="@+id/tv_repository"
                            android:layout_marginTop="16dp"
                            android:text="@string/zero"
                            android:textAlignment="center"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_followers"
                            android:layout_marginTop="16dp"
                            android:text="@string/zero"
                            android:textAlignment="center"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_following"
                            android:layout_marginTop="16dp"
                            android:text="@string/zero"
                            android:textAlignment="center"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </TableRow>

                    <TableRow>
                        <TextView
                            android:id="@+id/tv_repository_label"
                            android:layout_margin="4dp"
                            android:text="@string/repository"
                            android:textAlignment="center"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tv_followers_label"
                            android:layout_margin="4dp"
                            android:text="@string/followers"
                            android:textAlignment="center"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tv_following_label"
                            android:layout_margin="4dp"
                            android:text="@string/following"
                            android:textAlignment="center"
                            android:textSize="14sp" />
                    </TableRow>
                </TableLayout>

                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="4dp"
                    tools:text="@string/location"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

                <TextView
                    android:id="@+id/tv_bio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textAlignment="center"
                    tools:text="@string/bio"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_location" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/tab_layout"
            app:tabGravity="fill"
            app:tabMode="fixed" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/view_pager"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintTop_toBottomOf="@+id/tabs" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
